<resources>
    <string name="app_name">GitABuddy</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="detail_fragment_filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id mi at nisl tincidunt vestibulum. In pretium nisi at odio posuere, sed ultricies enim cursus. Vestibulum molestie lobortis euismod. Nullam et magna nec neque malesuada condimentum id dictum elit. Cras dapibus, mi cursus facilisis accumsan, diam nisi dapibus leo, sagittis consectetur est purus sed ex. Nunc vulputate neque orci, eget venenatis neque faucibus et. Phasellus ligula tellus, maximus vel posuere sed, imperdiet nec metus. Sed auctor arcu nunc, sit amet sagittis velit ultricies sit amet. Maecenas placerat felis sed elit blandit, sed congue elit auctor. Fusce vitae lacus at massa ultrices auctor vitae eu lectus. Etiam tempus ullamcorper risus, at facilisis arcu aliquet ac. Integer iaculis luctus augue, at tempor mauris congue eu. Integer a pellentesque purus. Vivamus quis sapien felis. Morbi suscipit consequat metus aliquam luctus.</string>
    <string name="avatar_image_content_description">avatar</string>
    <string name="home_fragment_empty_message">Nothing to see here</string>

    <string name="followers">Followers</string>
    <string name="languages">Languages</string>
    <string name="projects">Projects</string>
    <string name="forks">Forks</string>
    <string name="email">E-mail</string>
    <string name="number_pushes_last_30_days">Number of pushes last 30 days</string>
</resources>
